--- a/typing/Properties/Settings.settings
+++ b/typing/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="english_typing.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="typing.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="questions_dir" Type="System.String" Scope="User">
