--- a/typing/typing.csproj
+++ b/typing/typing.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{22E2E94E-4A41-4E1A-86A4-C48BD62AAF86}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>english_typing</RootNamespace>
-    <AssemblyName>english_typing</AssemblyName>
+    <RootNamespace>typing</RootNamespace>
+    <AssemblyName>typing</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
