make about setting

--- a/typing/App.config
+++ b/typing/App.config
@@ -11,7 +11,10 @@
     <userSettings>
         <typing.Properties.Settings>
             <setting name="questions_dir" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="scale" serializeAs="String">
+                <value>1</value>
             </setting>
         </typing.Properties.Settings>
     </userSettings>
