--- a/typing/Properties/Settings.settings
+++ b/typing/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="questions_dir" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="scale" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
