change a little about color

--- a/typing/App.config
+++ b/typing/App.config
@@ -10,11 +10,14 @@
     </startup>
     <userSettings>
         <typing.Properties.Settings>
-            <setting name="questions_dir" serializeAs="String">
-                <value />
+            <setting name="colortheme" serializeAs="String">
+                <value>colorthemes/default.xaml</value>
             </setting>
             <setting name="scale" serializeAs="String">
                 <value>1</value>
+            </setting>
+            <setting name="questions_dir" serializeAs="String">
+                <value />
             </setting>
         </typing.Properties.Settings>
     </userSettings>
