--- a/typing/App.config
+++ b/typing/App.config
@@ -19,6 +19,9 @@
             <setting name="questions_dir" serializeAs="String">
                 <value />
             </setting>
+            <setting name="keyboard_dir" serializeAs="String">
+                <value />
+            </setting>
         </typing.Properties.Settings>
     </userSettings>
 </configuration>
