--- a/typing/Properties/Settings.settings
+++ b/typing/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="questions_dir" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="keyboard_dir" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
