add color theme

--- a/typing/typing.csproj
+++ b/typing/typing.csproj
@@ -90,6 +90,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="colorthemes\yellow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="colorthemes\dark.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
