--- a/typing/App.config
+++ b/typing/App.config
@@ -22,6 +22,12 @@
             <setting name="keyboard_dir" serializeAs="String">
                 <value />
             </setting>
+            <setting name="username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="posturl" serializeAs="String">
+                <value />
+            </setting>
         </typing.Properties.Settings>
     </userSettings>
 </configuration>
