--- a/typing/Properties/Settings.settings
+++ b/typing/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="keyboard_dir" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="username" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="posturl" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
