change a little about language

--- a/typing/App.config
+++ b/typing/App.config
@@ -28,6 +28,9 @@
             <setting name="posturl" serializeAs="String">
                 <value />
             </setting>
+            <setting name="langtheme" serializeAs="String">
+                <value />
+            </setting>
         </typing.Properties.Settings>
     </userSettings>
 </configuration>
