--- a/typing/Properties/Settings.settings
+++ b/typing/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="posturl" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="langtheme" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
