--- a/typing/typing.csproj
+++ b/typing/typing.csproj
@@ -105,6 +105,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="languages\english.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="languages\japanese.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="colorthemes\lightgreen.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
